--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,14 @@
 {
   "name": "Turn Off namuwiki",
-  "version": "0.0.1",
-  "description":"나무위키 꺼라",
+  "version": "0.1.0",
+  "description":"조별과제 때마다 \"나무위키 꺼라.\"라고 말하시는게 피곤하신 여러분을 위해 만들어진 Chrome Extension, **나무위키를 꺼 드립니다.**",
   "permissions": ["declarativeContent", "tabs", "storage"],
   "background": {
     "scripts": ["src/bg.js"],
     "persistent": false
   },
   "page_action": {
+    "default_icon": "showcase/switch-128x128.png",
     "default_popup": "interface/popup/index.html"
   },
   "manifest_version": 2
