--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Turn Off namuwiki",
-  "version": "0.3.0-alpha",
+  "version": "0.3.0",
   "description":"조별과제 때마다 \"나무위키 꺼라.\"라고 말하시는게 피곤하신 여러분을 위해 만들어진 Chrome Extension, **나무위키를 꺼 드립니다.**",
   "permissions": ["declarativeContent", "tabs", "storage"],
   "background": {
