--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
   "name": "Turn Off namuwiki",
   "version": "0.3.0",
+  "author": "Alex4386 and TurnOff NamuWiki Contributors",
   "description":"조별과제 때마다 \"나무위키 꺼라.\"라고 말하시는게 피곤하신 여러분을 위해 만들어진 Chrome Extension, **나무위키를 꺼 드립니다.**",
   "permissions": ["tabs", "storage"],
   "background": {
@@ -8,14 +9,21 @@
       "polyfill/browser-polyfill.min.js",
       "lib/bg.js"
     ],
-    "persistent": false
+    "persistent": true
   },
-  "page_action": {
+  "browser_action": {
     "default_icon": "showcase/switch-128x128.png",
+    "default_title": "TurnOff NamuWiki",
     "default_popup": "interface/popup/index.html"
   },
   "icons": {
     "128":"showcase/logo-128x128.png"
+  },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "turnoff-namuwiki@alex4386.us",
+      "strict_min_version": "42.0"
+    }
   },
   "manifest_version": 2
 }
