--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "turnoff-namuwiki",
-  "version": "0.2.0",
+  "version": "0.3.2",
   "description": "Turns off your namuwiki",
   "main": "src/",
   "repository": "https://github.com/Alex4386/turnoff-namuwiki.git",
@@ -14,6 +14,6 @@
     "web-ext-types": "^3.2.0"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc && ./launch.sh"
   }
 }
