--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "web-ext-types": "^3.2.0"
   },
   "scripts": {
-    "build": "tsc && ./build.sh"
+    "build": "tsc",
+    "build-package": "tsc && ./build.sh"
   }
 }
