add: resources for uploading stores

--- a/manifest.json
+++ b/manifest.json
@@ -17,6 +17,8 @@
     "default_popup": "interface/popup/index.html"
   },
   "icons": {
+    "256":"showcase/logo-256x256.png",
+    "192":"showcase/logo-256x256.png",
     "128":"showcase/logo-128x128.png"
   },
   "browser_specific_settings": {
