--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "version": "0.4.2",
   "author": "Alex4386 and TurnOff NamuWiki Contributors",
   "description":"조별과제 때마다 \"나무위키 꺼라.\"라고 말하시는게 피곤하신 여러분을 위해 만들어진 Browser Extension, **나무위키를 꺼 드립니다.**",
-  "permissions": ["tabs", "storage", "https://*.google.com/"],
+  "permissions": ["tabs", "storage", "https://*.google.com/", "https://duckduckgo.com/*"],
   "background": {
     "scripts": [
       "polyfill/browser-polyfill.min.js",
