--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "turnoff-namuwiki",
-  "version": "0.6.`",
+  "version": "0.6.1",
   "description": "Turns off your namuwiki",
   "main": "src/",
   "repository": "https://github.com/Alex4386/turnoff-namuwiki.git",
