chore: production info was added to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,6 @@ yarn-error.log
 # Archived Results
 turnoff-namuwiki.zip
 turnoff-namuwiki@alex4386.us.xpi
+
+# production info
+production_ver.txt
