update: bump up to version 0.7.0 :arrow_up:

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "turnoff-namuwiki",
-  "version": "0.6.4",
+  "version": "0.7.0",
   "description": "Turns off your namuwiki",
   "main": "src/",
   "repository": "https://github.com/Alex4386/turnoff-namuwiki.git",
@@ -11,7 +11,11 @@
     "webextension-polyfill": "^0.4.0"
   },
   "devDependencies": {
-    "web-ext-types": "^3.2.0"
+    "ts-loader": "^6.2.1",
+    "web-ext-types": "^3.2.0",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "scripts": {
     "build": "tsc",
