chore: updated build script

--- a/.gitignore
+++ b/.gitignore
@@ -191,6 +191,7 @@ yarn-error.log
 
 # Archived Results
 turnoff-namuwiki.zip
+turnoff-namuwiki.dev.zip
 turnoff-namuwiki@alex4386.us.xpi
 
 # production info
