--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-
+  ci:
     runs-on: ubuntu-latest
 
     strategy:
@@ -30,3 +29,34 @@ jobs:
       run: yarn
     - name: Run build
       run: yarn build
+      
+  build:
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [12.x]
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - name: Install Yarn
+      run: npm install -g yarn
+    - name: Install Dependencies
+      run: yarn
+    - name: Build the sourcecode
+      run: yarn build
+    - name: Build the artifact
+      run: |
+        chmod +x ./.github/workflows-resource/build-ci.sh
+        ./.github/workflows-resource/build-ci.sh
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v2
+      with:
+        # Artifact name
+        name: turnoff-namuwiki.zip
+        # A file, directory or wildcard pattern that describes what to upload
+        path: turnoff-namuwiki.zip
