--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "Turn Off namuwiki",
-  "version": "0.7.1",
+  "version": "0.7.2",
   "author": "Alex4386 and TurnOff NamuWiki Contributors",
-  "description":"조별과제 때마다 \"나무위키 꺼라.\"라고 말하시는게 피곤하신 여러분을 위해 만들어진 Browser Extension, **나무위키를 꺼 드립니다.**",
+  "description": "자료조사, 조별과제의 지뢰, 나무위키를 꺼드립니다.",
   "permissions": ["tabs", "storage", "*://*/*", "webRequest", "webRequestBlocking"],
   "background": {
     "scripts": [
