--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "devDependencies": {
     "ts-loader": "^6.2.1",
     "web-ext-types": "^3.2.0",
-    "webpack": "^4.42.0",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "clean-webpack-plugin": "^3.0.0"
   },
   "scripts": {
-    "build": "tsc",
-    "build-package": "tsc && ./build.sh"
+    "build": "webpack",
+    "build-package": "webpack && ./build.sh"
   }
 }
