--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
       "node_modules/web-ext-types"
     ],
     "esModuleInterop": true,
-    "strictNullChecks": false
+    "strictNullChecks": false,
+    "sourceMap": true
   }
 }
