--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     ],
     "target": "ES2017",
     "module": "ES6",
+    "moduleResolution": "Node",
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
