--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,3 +58,11 @@ jobs:
         name: turnoff-namuwiki.zip
         # A file, directory or wildcard pattern that describes what to upload
         path: turnoff-namuwiki.zip
+
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        # Artifact name
+        name: turnoff-namuwiki.xpi
+        # A file, directory or wildcard pattern that describes what to upload
+        path: turnoff-namuwiki.xpi
