--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Turn Off namuwiki",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "author": "Alex4386 and TurnOff NamuWiki Contributors",
   "description": "자료조사, 조별과제의 지뢰, 나무위키를 꺼드립니다.",
   "permissions": [
@@ -12,9 +12,7 @@
     "scripting"
   ],
   "background": {
-    "scripts": [
-      "dist/background.js"
-    ]
+    "service_worker": "dist/background.js"
   },
   "host_permissions": [
     "*://*/*"
